--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Slavery -- Fiction'
 - !lcsh 'Short stories'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: The end of Phæacia -- In the wrong paradise -- A cheap nigger --
   The romance of the frst radical -- A duchess's secret -- The house of strange stories
   -- In Castle Perilous -- The great Gladstone myth -- My friend the beach-comber.
